update search ajax

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="container">
         <nav>
             <form>
-                <input type="text" placeholder="Search by City"/>
-                <a class="search-btn" href="#"><i class="fas fa-search"></i></a>
+                <input type="text" id="searchtext" placeholder="Search by City"/>
+                <a class="search-btn" id="search" href="#"><i class="fas fa-search"></i></a>
             </form>
         </nav>
 
@@ -30,7 +30,7 @@
                     <span>F</span>
                 </div>
                 <div class="feels-like">
-                    <h3>Feels Like</h3>
+                    <span>Feels Like</span>
                     <strong><span id="feelslike">00</span></strong> F
 
                 </div>
