update 7day temp

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 
         <div class="current-weather">
             <div class="current-box">
-                <span id="today-day">Wednesday</span>
-                <span id="today-date">9/9/2020</span>
+                <div class="date">
+                    <span id="today-day">Wednesday</span>
+                    <span id="today-date">9/9/2020</span>
+                </div>
                 <span id="city">City</span></>
                 <div class="icontemp">
-                    <span id="icon">ICON</span>
+                    <span id="icon"></span>
                     <strong><span id="temperature">Temperature</span></strong>
                     <span>F</span>
                 </div>
@@ -38,15 +40,15 @@
                 <div class="hwuv">
                     <div class="humidity">
                         <h4>Humidity</h4>
-                        <span id="humidity">Humidity</span><span>%</span>
+                        <span id="humidity">-</span><span>%</span>
                     </div>
                     <div class="windspeed">
                         <h4>Windspeed</h4>
-                        <span id="windspeed">Windspeed</span><span> mph</span>
+                        <span id="windspeed">-</span><span> mph</span>
                     </div>
                     <div class="uvindex">
                         <h4>UV Index</h4>
-                        <div id="uvindex">UV index</div>
+                        <div id="uvindex">-</div>
                     </div>
                 </div>
             </div>
