update 7 date forecast icon

--- a/index.html
+++ b/index.html
@@ -60,39 +60,46 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide" id="slide1">
-                    <h2>City</h2>
-                    <h3>Monday</h3>
-                    <h3>Weather</h3>
+                    <span id="sliderDate"></span>
+                    <span id="sliderIcon"></span>
+                    <span>High:<span id="high">-</span></span>
+                    <span>Low:<span id="low">-</span></span>
                 </div>
                 <div class="swiper-slide" id="slide2">
-                    <h2>City</h2>
-                    <h3>Tuesday</h3>
-                    <h3>Weather</h3>
+                    <span id="sliderDate"></span>
+                    <span id="sliderIcon"></span>
+                    <span>High:<span id="high">-</span></span>
+                    <span>Low:<span id="low">-</span></span>
                 </div>
                 <div class="swiper-slide" id="slide2">
-                    <h2>City</h2>
-                    <h3>Wednesday</h3>
-                    <h3>Weather</h3>
+                    <span id="sliderDate"></span>
+                    <span id="sliderIcon"></span>
+                    <span>High:<span id="high">-</span></span>
+                    <span>Low:<span id="low">-</span></span>
                 </div>
                 <div class="swiper-slide" id="slide4">
-                    <h2>City</h2>
-                    <h3>Thursday</h3>
-                    <h3>Weather</h3>
+                    <span id="sliderDate"></span>
+                    <span id="sliderIcon"></span>
+                    <span>High:<span id="high">-</span></span>
+                    <span>Low:<span id="low">-</span></span>
                 </div>
                 <div class="swiper-slide" id="slide5">
-                    <h2>City</h2>
-                    <h3>Friday</h3>
-                    <h3>Weather</h3>
+                    <span id="sliderDate"></span>
+                    <span id="sliderIcon"></span>
+                    <span>High:<span id="high">-</span></span>
+                    <span>Low:<span id="low">-</span></span>
                 </div>
                 <div class="swiper-slide" id="slide6">
-                    <h2>City</h2>
-                    <h3>Saturday</h3>
-                    <h3>Weather</h3>
+                    <span id="sliderDate"></span>
+                    <span id="sliderIcon"></span>
+                    <span>High:<span id="high">-</span></span>
+                    <span>Low:<span id="low">-</span></span>
                 </div>
                 <div class="swiper-slide" id="slide7">
-                    <h2>City</h2>
-                    <h3>Sunday</h3>
-                    <h3>Weather</h3>
+                    <span id="sliderDate"></span>
+                    <span id="sliderIcon"></span>
+                    <span>High:<span id="high">-</span></span>
+                    <span>Low:<span id="low">-</span></span>
                 </div>
             </div>
      
