--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
 </head>
 <body>
     <div class="container">
-        <nav>
+        <div class="burger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <nav class="nav">
             <form>
                 <input type="text" id="searchtext" placeholder="Search by City"/>
                 <a class="search-btn" id="search" href="#"><i class="fas fa-search"></i></a>
             </form>
+            <ul class="search-list">
+                <li class="link"><a href="#" class="atag"></a></li>
+            </ul>
         </nav>
 
         <div class="current-weather">
