fix http to https and remove form

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div></div>
         </div>
         <nav class="nav">
-            <form>
+            <div class="form">
                 <input type="text" id="searchtext" placeholder="Search by City"/>
                 <a class="search-btn" id="search" href="#"><i class="fas fa-search"></i></a>
-            </form>
+            </div>
             <ul class="search-list">
                 <li class="link"><a href="#" class="atag"></a></li>
             </ul>
